--- a/config.yaml
+++ b/config.yaml
@@ -1,10 +1,11 @@
 DATASET:
   TRAIN_PATH: "./dataset/train"
   TEST_PATH: "./dataset/test"
+  VAL_PATH: "./dataset/val"
 
 SAM:
   CHECKPOINT: "./sam_vit_b_01ec64.pth"
-  RANK: 512
+  RANK: 4
 TRAIN:
   BATCH_SIZE: 1
   NUM_EPOCHS: 50
